Remove award from bib and fix publications on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -615,6 +615,12 @@ footer.sticky-bottom {
         }
       }
 
+      @media (max-width: 576px) {
+        .info {
+          width: 50%;
+        }
+      }
+
       .title {
         font-weight: bolder;
       }
